tests/should_fail/syntax_tuple_var_index.nv
module main

// SHOULD FAIL: tuple indexed with a variable (must be integer literal)
let t = (10, 20, 30)
let i = 0
println(t[i])
